creation of index.html
